[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/weapons/Missile.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/spaceMissiles_009.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.39568
height = 2.93301

[node name="Missile" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Missile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Missile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
